# fibocom_slz

./: .gitignore  AGENTS.md  README.md
modules/Q-learning/: AGENTS.md  README.md  pyproject.toml
modules/Q-learning/docs/: README.md  对外接口与前端设计.md
modules/Q-learning/src/: README.md
modules/Q-learning/tests/: README.md  test_basic_qlearning_policy.py
modules/Q-learning/tools/: github-auth-clone.sh
modules/Q-learning/web/: README.md  index.html
modules/uav-weather-energy-engine/: .gitignore  README.md  pyproject.toml
modules/uav-weather-energy-engine/configs/: base.yaml  experiment.yaml  historical_weather.yaml  model.yaml  weather.yaml
modules/uav-weather-energy-engine/references/: manifest.json
modules/uav-weather-energy-engine/scripts/: analyze_deployment_errors.py  analyze_m100_window_retention.py  analyze_multi_source_error_slices.py  analyze_phase_errors.py  analyze_task_replay_errors.py  audit_dataset_fields.py  audit_physical_field_semantics.py  audit_weight_semantics_and_constant_bias.py  build_dataset.py  build_m100_task_replay_inputs.py  build_multi_source_training_tables.py  build_reachability_safety_profile.py  build_segment_dataset.py  build_wemuav_task_replay_inputs.py  fetch_references.py  join_historical_weather.py  prepare_m100_dataset.py  prepare_wemuav_dataset.py  run_ablation.py  run_deployment_target_suite.py  run_generalization_benchmark.py  run_m100_task_replay_benchmark.py  run_mass_assumption_experiment.py  run_multi_source_error_benchmark.py  run_multi_source_robustness_benchmark.py  run_predict.py  run_real_flight_replay_benchmark.py  run_reproduction_baseline.py  run_segment_weather_ablation.py  run_task_predict.py  run_task_speed_search.py  run_training_views_suite.py  run_weather_ablation.py  train_deployment_model.py  train_model.py
modules/uav-weather-energy-engine/tests/: conftest.py  test_altitude_profiles.py  test_dataset.py  test_error_analysis.py  test_features.py  test_field_semantics.py  test_mass_assumption_experiment.py  test_model.py  test_multi_source_error_benchmark.py  test_multi_source_training.py  test_phase_expert.py  test_phase_residual.py  test_physical_field_semantics_audit.py  test_planned_equivalent_features.py  test_predict_defaults.py  test_reachability.py  test_route_features.py  (+8 more)
modules/uav_virtual_validation/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
(+2260 files in other folders)
