[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qlearning-policy"
version = "0.1.0"
description = "面向无人机端边计算卸载的基础 Q-learning 策略框架。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
qlearning-policy = "qlearning_policy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
