[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-virtual-validation"
version = "0.1.0"
description = "Virtual simulation and validation lab for UAV weather-energy prediction."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
