[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-gis-replay-studio"
version = "0.1.0"
description = "GIS map and replay dashboard demo extracted from the legacy UAV GIS demo."
requires-python = ">=3.10"
dependencies = [
  "folium",
  "matplotlib",
  "numpy",
  "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]
