[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-weather-energy-predictor"
version = "0.1.0"
description = "Weather-driven UAV energy prediction demo extracted from the legacy GIS demo."
requires-python = ">=3.10"
dependencies = [
  "joblib",
  "numpy",
  "pandas",
  "requests",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]
